--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -7,6 +7,15 @@
     android:orientation="vertical"
     tools:context=".MainActivity2">
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/profile_image"
+        android:layout_width="196dp"
+        android:layout_height="196dp"
+        android:src="@drawable/stock_vector_vector_illustration_portrait_of_tuxedo_cat_1836505336"
+        app:civ_border_width="2dp"
+        app:civ_border_color="#FF000000"
+        android:layout_gravity="center"/>
 
     <TextView
         android:id="@+id/textoUno"
