--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -12,7 +12,7 @@
         android:id="@+id/profile_image"
         android:layout_width="196dp"
         android:layout_height="196dp"
-        android:src="@drawable/stock_vector_vector_illustration_portrait_of_tuxedo_cat_1836505336"
+        android:src="@raw/tuxcat"
         app:civ_border_width="2dp"
         app:civ_border_color="#FF000000"
         android:layout_gravity="center"/>
